@@ -225,11 +225,13 @@ import edu.umd.cs.findbugs.annotations.NonNull;
         <code><![CDATA[
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.NoSuchElementException;
 
 public class Test {
     /**
      * {@link ArrayList#add(Object)}
      * @see Collections
+     * @throws NoSuchElementException no such element
      */
     String[] getList() { }
 }
