@@ -16,6 +16,7 @@ New Java rule:
 
 ????? ??, 2013 - 5.0.4:
 
+Fixed bug  254: False+ : UnusedImport with Javadoc @throws
 Fixed bug 1080: net.sourceforge.pmd.cpd.CPDTest test failing
 Fixed bug 1081: Regression: CPD skipping all files when using relative paths
 Fixed bug 1082: CPD performance issue on larger projects
